2000-08-12  Neil Jerram  <neil@ossau.uklinux.net>

	* numbers.c (s_scm_logand): Docstring fix - "@end lisp" inserted.

2000-08-11  Neil Jerram  <neil@ossau.uklinux.net>

	* macros.c: Remove surplus newlines from end of docstrings.

	* list.c (scm_list_tail): Add @deffnx line to docstring for
	list-cdr-ref.
	
	* keywords.c: Docstring improvements in conjunction with new
	reference manual doc on keywords.

	* error.c (scm_error_scm): Fix texinfo syntax error in
	docstring.  (@code(~S) should be @code{~S}.)

	* dynl.c: Remove surplus newlines from end of docstrings.

2000-08-11  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* eval.c (scm_eval): Backward incompatible change: Now takes an
	environment specifier as second arg.  `eval' hereby becomes R5RS
	compatible.
	(scm_i_eval_x, scm_i_eval): New functions (replace
	scm_eval_3).
	(scm_eval2, scm_eval_3): Deprecated.
	(scm_top_level_lookup_closure_var): Deprecated.

	* eval.h: #include "struct.h".

	* evalext.c (scm_definedp): Have to work before module system is
	booted.

	* modules.h (SCM_MODULEP, SCM_VALIDATE_MODULE,
	SCM_MODULE_OBARRAY, SCM_MODULE_USES, SCM_MODULE_BINDER,
	SCM_MODULE_EVAL_CLOSURE): New macros.
	(scm_module_index_obarray, scm_module_index_uses,
	scm_module_index_binder, scm_module_index_eval_closure): New
	constants; #include "validate.h".
	
	* modules.c (scm_module_tag, scm_module_system_booted_p): New
	globals.
	(scm_post_boot_init_modules): Initialize scm_module_tag.
	(scm_interaction_environment): New primitive.

	* symbols.c (scm_can_use_top_level_lookup_closure_var): Removed.
	#include "modules.h".

	* strports.c (scm_eval_string): Evaluate in
	scm_interaction_environment ().

	* script.c (scm_shell): Pass scm_the_root_module () as second arg
	to new scm_eval_x.

	* load.c (load): Use `scm_selected_module' to compute second arg
	to new scm_i_eval_x; Don't call it if module system hasn't booted.
	(scm_read_and_eval_x): Deprecated.
	#include "modules.h".
